# ghcacher

./: .gitignore  Cargo.toml  README.md  demo.sh
chat_log/: 20260324.0.ghcacher-sync-optimization.md  20260325.0.ghcacher-n1-setup-bare-clone.md  20260325.1.ghcacher-cmd-server-subscriptions.md  20260325.2.ghcacher-http-unification.md  20260325.3.20260325.3.ghcacher-http-unification.md  20260325.4.20260325.4.ghcacher-observability-cleanup.md  20260326.0.ghcacher-rusqlite-to-sqlx-async.md  20260326.1.ghcacher-rusqlite-to-sqlx-migration.md  20260326.2.ghcache-client-checkouts-sprefa-integration.md  20260327.0.ghcache-client-sprefa-integration-and-immediate-sync.md  20260408.0.io-bill-of-materials.md  20260416.0.ghcache-fetch-only-watch-loop.md  LATEST.md
ghcache-client/: Cargo.toml  README.md
ghcache-client/src/: cmd.rs  lib.rs  query.rs  tail.rs  types.rs
init-form/: go.mod  main.go
src/: checkout.rs  cmd.rs  config.rs  db.rs  gh.rs  main.rs  output.rs  pidfile.rs  schema.sql  serve.rs  setup.rs
src/query/: events.rs  mod.rs  notifications.rs  prs.rs  sql.rs
src/sync/: branches.rs  events.rs  mod.rs  notifications.rs  prs.rs
