[package]
name = "ghcache-client"
version = "0.1.0"
edition = "2021"
description = "Read-only typed client for the ghcache SQLite database"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
