[package]
name = "ghcache-client"
version = "0.1.0"
edition = "2021"
description = "Read-only typed client for the ghcache SQLite database"

[dependencies]
sqlx    = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio   = { version = "1",   features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
